@@ -256,6 +256,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-389: add documentation for message filter. (sijie via ivank)
 
+	BOOKKEEPER-399: Let hub server configure write quorum from ack quorum. (sijie via fpj)
+
       hedwig-client:
 
         BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)
